--- a/2023_04_26/ex.ipynb
+++ b/2023_04_26/ex.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,16 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv(\"data.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -100,18 +91,19 @@
        "4  Lecce  Salernitana         1         1"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "df = pd.read_csv(\"data.csv\")\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +240,7 @@
        "4          1  "
       ]
      },
-     "execution_count": 135,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +266,7 @@
        "Name: PointHome, dtype: int64"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +293,7 @@
        "Name: PointAway, dtype: int64"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +446,7 @@
        "Sampdoria         0        -1"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,34 +456,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# Aggiungere 3 colonne a ranking con il numero di vittorie, pareggi e sconfitte\n",
-    "df.groupby(by=\"Home\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
