--- a/2023_05_03/ex.ipynb
+++ b/2023_05_03/ex.ipynb
@@ -1,8 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/s2n-cnit/cassini-potenziamento-informatica/blob/main/2023_05_03/ex.ipynb\">\n",
+    "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+    "</a>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -20,9 +29,6 @@
       "Requirement already satisfied: pyparsing>=2.3.1 in /opt/homebrew/lib/python3.11/site-packages (from matplotlib) (3.0.9)\n",
       "Requirement already satisfied: python-dateutil>=2.7 in /Users/alexcarrega/Library/Python/3.11/lib/python/site-packages (from matplotlib) (2.8.2)\n",
       "Requirement already satisfied: six>=1.5 in /Users/alexcarrega/Library/Python/3.11/lib/python/site-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.1.2\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython3.11 -m pip install --upgrade pip\u001b[0m\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -39,26 +45,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Errno 2] No such file or directory: '/content'\n",
-      "/Users/alexcarrega/Library/CloudStorage/OneDrive-unige.it/teaching/cassini/2023_05_03/cassini-potenziamento-informatica/2023_04_26\n",
-      "Cloning into 'cassini-potenziamento-informatica'...\n",
-      "remote: Enumerating objects: 482, done.\u001b[K\n",
-      "remote: Counting objects: 100% (482/482), done.\u001b[K\n",
-      "remote: Compressing objects: 100% (368/368), done.\u001b[K\n",
-      "remote: Total 482 (delta 100), reused 475 (delta 100), pack-reused 0\u001b[K\n",
-      "Receiving objects: 100% (482/482), 11.42 MiB | 1.91 MiB/s, done.\n",
-      "Resolving deltas: 100% (100/100), done.\n",
-      "/Users/alexcarrega/Library/CloudStorage/OneDrive-unige.it/teaching/cassini/2023_05_03/cassini-potenziamento-informatica/2023_04_26/cassini-potenziamento-informatica/2023_04_26\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if Path(\"/content\").exists():\n",
     "  %cd /content\n",
@@ -69,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +137,7 @@
        "4  Lecce  Salernitana         1         1"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +286,7 @@
        "4          1  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +312,7 @@
        "Name: PointHome, dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +339,7 @@
        "Name: PointAway, dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +492,7 @@
        "Sampdoria         0        -1"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +512,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -544,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 55,
    "metadata": {
     "tags": []
    },
@@ -556,20 +545,6 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
