--- a/2023_04_26/ex.ipynb
+++ b/2023_04_26/ex.ipynb
@@ -456,6 +456,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": []
@@ -477,7 +478,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
