--- a/2023_04_26/ex.ipynb
+++ b/2023_04_26/ex.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"data.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -91,19 +100,18 @@
        "4  Lecce  Salernitana         1         1"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"data.csv\")\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +248,7 @@
        "4          1  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +274,7 @@
        "Name: PointHome, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +301,7 @@
        "Name: PointAway, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +454,7 @@
        "Sampdoria         0        -1"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,9 +464,34 @@
    ]
   },
   {
-   "attachments": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Aggiungere 3 colonne a ranking con il numero di vittorie, pareggi e sconfitte\n",
+    "df.groupby(by=\"Home\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -478,7 +511,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4
  },
